--- a/problems/98.validate-binary-search-tree.md
+++ b/problems/98.validate-binary-search-tree.md
@@ -178,7 +178,7 @@ Java Code:
  */
 class Solution {
     public boolean isValidBST(TreeNode root) {
-        Stack<Integer> stack = new Stack<> ();
+        Stack<TreeNode> stack = new Stack<> ();
         TreeNode previous = null;
 
         while (root != null || !stack.isEmpty()) {
